--- a/pom.xml
+++ b/pom.xml
@@ -568,10 +568,10 @@
                     <changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
                     <diffChangeLogFile>src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                     <driver></driver>
-                    <url>jdbc:sqlserver://localhost:1433;database=jhipster</url>
+                    <url>jdbc:sqlserver://mpi.database.windows.net:1433;database=JhipsterAngular</url>
                     <defaultSchemaName></defaultSchemaName>
-                    <username>SA</username>
-                    <password>yourStrong(!)Password</password>
+                    <username>commander</username>
+                    <password>Cobra1234</password>
                     <referenceUrl>hibernate:spring:com.jhipster.server.domain?dialect=org.hibernate.dialect.SQLServerDialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
@@ -827,7 +827,8 @@
                                     <arguments>install</arguments>
                                 </configuration>
                             </execution>
-                            <execution>
+                           
+                            <!--<execution>
                                 <id>webpack build prod</id>
                                 <goals>
                                     <goal>yarn</goal>
@@ -836,9 +837,45 @@
                                 <configuration>
                                     <arguments>run webpack:prod</arguments>
                                 </configuration>
-                            </execution>
+                            </execution>-->
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                                <execution>
+                            <id>exec-npm-install</id>
+                            <phase>generate-sources</phase>
+                            <configuration>
+                                <workingDirectory>${project.basedir}</workingDirectory>
+                                <executable>npm.cmd</executable>
+                                <arguments>
+                                    <argument>install</argument>
+                                </arguments>
+                            </configuration>
+                            <goals>
+                                <goal>exec</goal>
+                            </goals>
+                        </execution>
+                             <execution>
+                                <id>ng build prod</id>
+                                <phase>generate-resources</phase>
+                                <configuration>
+                                    <executable>ng.cmd</executable>
+                                     <arguments>
+                                        <argument>build</argument>
+                                                            
+                                        <argument>--output-path=${project.basedir}/target/wwwroot</argument>
+                                    </arguments>
+                                </configuration>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                          
+                        </executions>
+                </plugin>
                 </plugins>
             </build>
             <properties>
