Fixed reference to jhipster.war reference

--- a/web.config
+++ b/web.config
@@ -62,7 +62,7 @@
                                                                                      
         -->
         <httpPlatform processPath="%JAVA_HOME%\bin\java.exe"
-                        arguments="-jar &quot;d:\home\site\wwwroot\webapps\hipster-0.0.1-SNAPSHOT.war&quot;"
+                        arguments="-jar &quot;d:\home\site\wwwroot\webapps\jhipster-0.0.1-SNAPSHOT.war&quot;"
                       />
     </system.webServer>
 </configuration>
